--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="css/main.css" >
 </head>
 <body>
-    <h1>Este es un starter para los sdf sdsdf proyectos de node,tiene express,node,sass,y bre </h1>
+    <h1>hola breve elaod </h1>
 </body>
 
-<script src="js/app.js"></script>
+<script src="js/main.js"></script>
 </html>
